--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,16 @@ jobs:
       run: g++ -o sudo_site sudo_site.cpp -lstdc++fs
     - name: build
       run: ./sudo_site
-    - name: Push changes to the cpp_ssg_demo repository
+    - name: Push changes to the sudo_site_demo repository
       run: |
        ls
-       git clone https://${{ secrets.MYTOKEN }}@github.com/sharadcodes/cpp_ssg_demo.git
-       cp -a site/. cpp_ssg_demo
-       cd cpp_ssg_demo
+       git clone https://${{ secrets.MYTOKEN }}@github.com/sharadcodes/sudo_site_demo.git
+       cp -a site/. sudo_site_demo
+       cd sudo_site_demo
        ls
        git config user.email "${{ github.actor }}@users.noreply.github.com"
        git config user.name "${{ github.actor }}"        
        git add .
        git commit -am "Site updated"
-       git push -f -q https://${{ secrets.MYTOKEN }}@github.com/sharadcodes/cpp_ssg_demo.git master
+       git push -f -q https://${{ secrets.MYTOKEN }}@github.com/sharadcodes/sudo_site_demo.git master
       
