--- a/cpp_ssg_config.json
+++ b/cpp_ssg_config.json
@@ -1,6 +1,6 @@
 {
     "site": {
-        "title": "John Doe's Website"
+        "title": "SUDO SSG Demo"
     },
     "collections": [
         "blog",
